@@ -1,0 +1,34 @@
+# $NetBSD: Makefile.common,v 1.1 2006/07/14 19:54:47 jlam Exp $#
+#
+# This Makefile fragment is included by:
+#
+#	pkgsrc/pkgtools/mtree/Makefile
+#	pkgsrc/sysutils/mtree/Makefile
+#
+
+DISTNAME=		mtree-20040722
+MASTER_SITES=		# empty
+DISTFILES=		# empty
+
+MAINTAINER=		grant@NetBSD.org
+HOMEPAGE=		http://www.NetBSD.org/
+COMMENT=		Utility for mapping and checking directory hierarchies
+
+GNU_CONFIGURE=		yes
+
+NO_CHECKSUM=		yes
+NO_MTREE=		yes
+
+FILESDIR=		${.CURDIR}/../../pkgtools/mtree/files
+PKGDIR=			${.CURDIR}/../../pkgtools/mtree
+
+.include "../../mk/bsd.prefs.mk"
+
+.if defined(LIBNBCOMPAT_STYLE) && (${LIBNBCOMPAT_STYLE} == "inplace")
+.  include "../../pkgtools/libnbcompat/inplace.mk"
+.else
+.  include "../../pkgtools/libnbcompat/buildlink3.mk"
+.endif
+
+do-extract:
+	@${CP} -R ${FILESDIR} ${WRKSRC}
